<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/lyRootMain"
    android:background="@color/main_green_light"
    android:layout_height="match_parent">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/ly_main_security"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/ly_main_title"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_main_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:textColor="@color/white"
                        android:textAllCaps="true"
                        android:text="@string/app_name"/>

                    <ImageView
                        android:id="@+id/iv_main_setting"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="8dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_main_setting"/>
                </RelativeLayout>

                <FrameLayout
                    android:id="@+id/ly_security_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <ImageView
                        android:layout_width="152dp"
                        android:layout_height="152dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_out_circle"/>

                    <ImageView
                        android:id="@+id/iv_security"
                        android:layout_width="122dp"
                        android:layout_height="122dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_main_safe" />

                    <ImageView
                        android:id="@+id/iv_security_risk"
                        android:layout_width="122dp"
                        android:layout_height="122dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_main_risk"
                        android:visibility="invisible"/>
                </FrameLayout>

                <TextView
                    android:id="@+id/tv_security_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:text="@string/safe"/>

                <TextView
                    android:id="@+id/tv_security_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/sub_title_color"
                    android:text="@string/txt_main_desc_safe"/>

                <TextView
                    android:id="@+id/tv_security_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="36dp"
                    android:paddingHorizontal="16dp"
                    android:minWidth="112dp"
                    android:gravity="center"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/sel_stoke_6cb290_8dp"
                    android:textSize="18dp"
                    android:textColor="@color/white"
                    android:fontFamily="@string/Roboto_Medium"
                    android:text="@string/txt_rescan"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_248561_top_round_24dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="166dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:id="@+id/ly_junk_clean"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="140dp"
                            android:minHeight="140dp"
                            android:layout_centerInParent="true"
                            android:gravity="center"
                            android:orientation="vertical">

                            <RelativeLayout
                                android:layout_width="60dp"
                                android:layout_height="60dp">

<!--                                <com.antivirus.s.security.booster.speedup.view.HPB-->
<!--                                    android:id="@+id/hpb_junk_clean"-->
<!--                                    android:layout_width="match_parent"-->
<!--                                    android:layout_height="match_parent"-->
<!--                                    app:strokeWidth="2dp"-->
<!--                                    android:layout_centerInParent="true"-->
<!--                                    app:mode="determinate"-->
<!--                                    app:progressColor="@color/color_E7663E"-->
<!--                                    app:progressBgColor="@color/color_26FFFFFF"-->
<!--                                    tools:progress="20"/>-->

                                <ImageView
                                    android:id="@+id/iv_junk_clean"
                                    android:layout_width="24dp"
                                    android:layout_height="24dp"
                                    android:layout_centerInParent="true"
                                    android:src="@drawable/main_clean_red"/>
                            </RelativeLayout>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/txt_junk_clean"
                                android:layout_marginTop="16dp"
                                android:textColor="@color/white"
                                android:textSize="16dp"/>

                            <TextView
                                android:id="@+id/tv_junk_desc"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="6dp"
                                android:textColor="@color/sub_title_color"
                                android:textSize="12dp"
                                tools:text="@string/txt_junk_clean_desc"/>
                        </LinearLayout>
                    </RelativeLayout>


                    <LinearLayout
                        android:layout_width="2dp"
                        android:layout_marginTop="48dp"
                        android:layout_marginBottom="38dp"
                        android:layout_height="match_parent"
                        android:background="@color/color_0DFFFFFF"/>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:id="@+id/ly_battery_save"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="140dp"
                            android:minHeight="140dp"
                            android:layout_centerInParent="true"
                            android:gravity="center"
                            android:orientation="vertical">

                            <RelativeLayout
                                android:layout_width="60dp"
                                android:layout_height="60dp">

<!--                                <com.antivirus.s.security.booster.speedup.view.HPB-->
<!--                                    android:id="@+id/hpb_battery_save"-->
<!--                                    android:layout_width="match_parent"-->
<!--                                    android:layout_height="match_parent"-->
<!--                                    app:strokeWidth="2dp"-->
<!--                                    android:layout_centerInParent="true"-->
<!--                                    app:mode="determinate"-->
<!--                                    app:progressColor="@color/color_E7663E"-->
<!--                                    app:progressBgColor="@color/color_26FFFFFF"-->
<!--                                    tools:progress="20"/>-->

                                <ImageView
                                    android:id="@+id/iv_battery_save"
                                    android:layout_width="52dp"
                                    android:layout_height="52dp"
                                    android:padding="14dp"
                                    android:layout_centerInParent="true"
                                    android:src="@drawable/main_battery_red"/>
                            </RelativeLayout>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/txt_battery_save"
                                android:layout_marginTop="16dp"
                                android:textColor="@color/white"
                                android:textSize="16dp"/>

                            <TextView
                                android:id="@+id/tv_battery_desc"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="6dp"
                                android:textColor="@color/sub_title_color"
                                android:textSize="12dp"
                                tools:text="@string/txt_battery_save_desc"/>
                        </LinearLayout>

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginHorizontal="20dp"
                    android:background="@color/color_0DFFFFFF"/>

                <LinearLayout
                    android:id="@+id/ly_game_boost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="64dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="16dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_main_game_boost"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="left|center_vertical"
                        android:layout_marginHorizontal="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_game_boost"
                            android:textSize="14dp"
                            android:textColor="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:textColor="@color/sub_title_color"
                            android:text="@string/txt_game_boost_desc"/>

                    </LinearLayout>

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_arrow_right" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ly_app_manager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="64dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="16dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_app_manager"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="left|center_vertical"
                        android:layout_marginHorizontal="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_app_manager"
                            android:textSize="14dp"
                            android:textColor="@color/white"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:textColor="@color/sub_title_color"
                            android:text="@string/txt_app_manager_desc"/>

                    </LinearLayout>

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_arrow_right" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>